force-app/main/default/objects/LittleBitsReportTrigger__c/LittleBitsReportTrigger__c.object-meta.xml
<CustomObject>
    <label>LittleBits Report Trigger</label>
    <nameField>
        <label>LittleBits Report Trigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LittleBits Report Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>