force-app/main/default/objects/LittleBitsReportTrigger__c/fields/AccessToken__c.field-meta.xml
<CustomField>
    <fullName>AccessToken__c</fullName>
    <inlineHelpText
  >Optional, if the LittleBits API Custom Setting is configured.</inlineHelpText>
    <label>Access Token</label>
    <length>128</length>
    <type>Text</type>
</CustomField>