force-app/main/default/objects/LittleBitsReportTrigger__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText
  >Active Report Triggers will be processed by the scheduled job.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>