force-app/main/default/objects/LittleBitsReportTrigger__c/fields/AggregateIndexForDuration__c.field-meta.xml
<CustomField>
    <fullName>AggregateIndexForDuration__c</fullName>
    <description
  >Index of the field in the group providing the duration of the voltage to send to the device in milliseconds.</description>
    <inlineHelpText
  >Optional, if not provided will leaves the voltage at the given percent permanently</inlineHelpText>
    <label>Aggregate Index for Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>