force-app/main/default/objects/LittleBitsReportTrigger__c/fields/AggregateIndexForPercent__c.field-meta.xml
<CustomField>
    <fullName>AggregateIndexForPercent__c</fullName>
    <description
  >Index of the field in the group providing the percentage of the voltage to send to the device.</description>
    <label>Aggregate Index for Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>