force-app/main/default/objects/LittleBitsReportTrigger__c/fields/GroupingIndex__c.field-meta.xml
<CustomField>
    <fullName>GroupingIndex__c</fullName>
    <label>Grouping Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>