force-app/main/default/objects/LittleBitsReportTrigger__c/fields/ReportDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>ReportDeveloperName__c</fullName>
    <label>Report Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>