force-app/main/default/objects/LittleBitsReportTrigger__c/fields/UniqueName__c.field-meta.xml
<CustomField>
    <fullName>UniqueName__c</fullName>
    <label>Unique Name</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>