force-app/main/default/objects/LittleBitsReportTrigger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>ReportDeveloperName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>